[package]
name = "axum-tonic-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9.0"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"]}
tonic = { version = "0.6.2"}
axum = "0.4.3"
hyper = { version = "0.14.16", features = ["full"]}
pin-project = "1.0.10"
tower = "0.4.11"

[build-dependencies]
tonic-build = "0.6"
